@startuml
!include chapter-4-style.puml
title ERD rút gọn: tài chính và đấu giá
left to right direction
hide methods
hide stereotypes
skinparam linetype ortho

entity "users" as users {
  *id : VARCHAR(36) <<PK>>
}
entity "products" as products {
  *id : BIGINT <<PK>>
  --
  seller_id : VARCHAR(36) <<FK>>
}
entity "wallets" as wallets {
  *id : BIGINT <<PK>>
  --
  user_id : VARCHAR(36) <<FK,UQ>>
  available_balance : DECIMAL
  frozen_balance : DECIMAL
  version : INT
}
entity "wallet_transactions" as wallet_transactions {
  *id : BIGINT <<PK>>
  --
  wallet_id : BIGINT <<FK>>
  amount : DECIMAL
  type : VARCHAR
}
entity "wallet_operations" as wallet_operations {
  *id : BIGINT <<PK>>
  --
  wallet_id : BIGINT <<FK>>
  operation_key : VARCHAR <<UQ>>
  status : VARCHAR
}
entity "vnpay_deposits" as vnpay_deposits {
  *id : BIGINT <<PK>>
  --
  user_id : VARCHAR(36) <<FK>>
  txn_ref : VARCHAR <<UQ>>
  status : VARCHAR
}
entity "platform_revenue_transactions" as platform_revenue {
  *id : BIGINT <<PK>>
  --
  source_user_id : VARCHAR(36) <<FK,nullable>>
  operation_key : VARCHAR <<UQ>>
  amount : DECIMAL
}
entity "auction_sessions" as auction_sessions {
  *id : BIGINT <<PK>>
  --
  product_id : BIGINT <<FK>>
  current_price : DECIMAL <<nullable>>
  highest_bidder_id : VARCHAR(36) <<logical,nullable>>
  status : VARCHAR
}
entity "auction_participants" as participants {
  *id : BIGINT <<PK>>
  --
  auction_session_id : BIGINT <<FK>>
  user_id : VARCHAR(36) <<FK>>
  deposit_status : VARCHAR
  --
  UQ(auction_session_id, user_id)
}
entity "bids" as bids {
  *id : BIGINT <<PK>>
  --
  auction_session_id : BIGINT <<FK>>
  user_id : VARCHAR(36) <<FK>>
  bid_trace_id : VARCHAR <<UQ>>
  bid_amount : DECIMAL
  status : VARCHAR
}

users ||--o| wallets
wallets ||--o{ wallet_transactions
wallets ||--o{ wallet_operations
users ||--o{ vnpay_deposits
users |o--o{ platform_revenue

users ||--o{ products : seller
products ||--o{ auction_sessions
auction_sessions ||--o{ participants
users ||--o{ participants
auction_sessions ||--o{ bids
users ||--o{ bids

users -[hidden]right-> wallets
wallets -[hidden]right-> wallet_transactions
wallet_transactions -[hidden]down-> wallet_operations
users -[hidden]down-> products
products -[hidden]right-> auction_sessions
auction_sessions -[hidden]right-> bids
@enduml
